<resources>
    <string name="app_name">LoggieBaby</string>
    <string name="app_version">Versão - 1.0</string>
    <string name="home_title">Bem-vindo ao LoggieBaby!</string>
    <string name="home_title_action">O que você deseja fazer?</string>
    <string name="home_title_button_new">Registrar nova atividade</string>
    <string name="title_button_save">Salvar</string>
    <string name="title_alert_atention">Atenção!</string>
    <string name="title_alert_warning">Aviso!</string>
    <string name="title_alert_error">Salvar</string>
    <string name="neutral_button_ok">OK</string>
    <string name="positive_alert">Sim</string>
    <string name="negative_alert">Não</string>
    <string name="title_menu_help">Ajuda</string>

    <string name="title_detail_value">Quantidade em (ml)</string>
    <string name="title_detail_description">Descrição</string>
    <string name="title_detail_time_spent">Tempo em minutos</string>

    <string name="title_menu_list">Escolha uma opção</string>
    <string name="home_title_button_viewall">Consultar Histórico</string>
    <string name="home_title_log_detail">Detalhes</string>
    <string name="home_button_save_log_detail">Salvar</string>
    <string name="home_title_viewall">Histórico de mamadas</string>s
    <string name="title_activity_new_breast_feeding">Nova atividade</string>
    <string name="title_activity_new_formula_feeding">Nova atividade</string>
    <string name="title_activity_history">Histórico de Mamadas</string>
    <string name="message_success_activity_new_breast_feeding">Atividade gravada com sucesso!</string>
    <string name="message_success_activity_delete_breast_feeding">Registro apagado com sucesso!</string>
    <string name="message_success_activity_update_breast_feeding">Mamada atualizada com sucesso!</string>
    <string name="message_alert_activity_delete_breast_feeding">O registro será excluído para sempre. Deseja continuar?</string>
    <string name="message_no_filled_fields"> Os campos não podem estar vazios!</string>
    <string name="message_no_filled_field">Campos com valores vazios ou inválidos. Por favor, revise o preenchimento e tente novamente!</string>
    <string name="message_no_activities">Nenhuma atividade cadastrada até o momento!</string>
    <string name="hint_activity_new_breast_feeding">Ex.: Mamada iniciando na mama direita e finalizando na esquerda...</string>
    <string name="hint_activity_formula_feeding">Fórmula tal...</string>
    <string name="hint_activity_formula_mls">Ex.: 160</string>
    <string name="text_activity_formula_feeding"> Informe a quantidade em (ml)</string>
    <string name="hint_activity_detail_timespent">Informe o tempo em minutos. Ex.: 55</string>
    <string name="text_activity_help">O LoggieBaby é um aplicativo para ajudar as mamães ou papais a manter o histórico de amamentação dos seus bebês. Com ele, é possível registrar as atividades de amamentação com leite materno ou complemento/fórmula, editar as informações, caso seja necessário, e verificá-las qualquer momento.</string>
</resources>
