<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="80dp"
        android:fontFamily="casual"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/textViewOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textViewTitle"
        android:layout_alignLeft="@+id/textViewTitle"
        android:layout_alignRight="@+id/textViewTitle"
        android:layout_alignStart="@+id/textViewTitle"
        android:layout_below="@+id/textViewTitle"
        android:text="@string/home_title_action"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/buttonNewLog"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/textViewTitle"
        android:layout_gravity="top"
        android:textColor="@color/colorLite"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/home_title_button_new"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="224dp"
        android:layout_alignRight="@+id/textViewTitle"
        android:layout_alignEnd="@+id/textViewTitle"
        android:layout_alignLeft="@+id/buttonViewLogs"
        android:layout_alignStart="@+id/buttonViewLogs" />

    <Button
        android:id="@+id/buttonViewLogs"
        android:layout_gravity="top"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:textColor="@color/colorLite"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/home_title_button_viewall"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="322dp"
        android:layout_below="@+id/buttonNewLog"
        android:layout_alignLeft="@+id/textViewTitle"
        android:layout_alignStart="@+id/textViewTitle"
        android:layout_alignRight="@+id/textViewTitle"
        android:layout_alignEnd="@+id/textViewTitle" />

</RelativeLayout>
